kubernetes/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        # Replace <your_tag> with the tag you just created
        image: 645026774230.dkr.ecr.ca-central-1.amazonaws.com/k8s-workshop-app1:<your_tag>
        resources:
          limits:
            memory: "30Mi"
            cpu: "10m"
        ports:
        - containerPort: 3000
