kubernetes/app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: myapp
        image: 645026774230.dkr.ecr.ca-central-1.amazonaws.com/k8s-workshop-app2:<your_tag>
        resources:
          limits:
            memory: "30Mi"
            cpu: "10m"
        ports:
        - containerPort: 3003
