kubernetes/app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: time-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 3003
